[tool.poetry]
name = "fydp-2025-g55"
version = "0.1.0"
description = ""
authors = ["Vivek Alamuri <valamuri@uwaterloo.ca>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
isort = "^5.13.2"
boto3 = "^1.34.144"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"
h2 = "^4.2.0"
pytz = "^2025.1"
np = "^1.0.2"
numpy = "^2.2.3"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
